Kevin-Exp/results/fmul_looped_results/gcc.txt
ATR_0228-144924/fmul_looped.c: In function ‘readMemoryByte’:
ATR_0228-144924/fmul_looped.c:56:9: warning: implicit declaration of function ‘asm’ [-Wimplicit-function-declaration]
   56 |         asm(
      |         ^~~
ATR_0228-144924/fmul_looped.c:57:24: error: expected ‘)’ before ‘:’ token
   57 |             ".rept 30;"
      |                        ^
      |                        )
......
   62 |             : "=m"(result_div)
      |             ~           
